--- a/ProjectHKII-Website/src/sass/components/banner.scss
+++ b/ProjectHKII-Website/src/sass/components/banner.scss
@@ -226,15 +226,15 @@
     }
 }
 
-@media (min-width: 1200px) {
-    .owl-carousel {
-        height: 95rem;
-        .owl-stage {
-            // padding-top: 95rem;
-            .owl-lazy {
-                height: 95rem;
-            }
-        }
-    }
-}
+// @media (min-width: 1200px) {
+//     .owl-carousel {
+//         height: 95rem;
+//         .owl-stage {
+//             // padding-top: 95rem;
+//             .owl-lazy {
+//                 height: 95rem;
+//             }
+//         }
+//     }
+// }
 
