--- a/ProjectHKII-Website/src/view/patials/navigation.pug
+++ b/ProjectHKII-Website/src/view/patials/navigation.pug
@@ -63,198 +63,115 @@ section.menu-nav
                             i.fas.fa-chevron-down.arrow-down
                         ul.nav-dropdown
                             li.nav-hover-dropdown
-                                a(href="#") Bấm kim
+                                a(href="#") Giấy in ấn
                             li.nav-hover-dropdown
-                                a(href="#") Bấm lỗ
+                                a(href="#") Giấy in fax - liên tục
                             li.nav-hover-dropdown
-                                a(href="#") Dao kéo
+                                a(href="#") Giấy notes
                             li.nav-hover-dropdown
-                                a(href="#") Kim bấm
+                                a(href="#") Giấy chuyên dụng
                             li.nav-hover-dropdown
-                                a(href="#") Kẹp sách - Gáy sách
-                            li.nav-hover-dropdown
-                                a(href="#") Băng keo - Cắt keo
-                            li.nav-hover-dropdown
-                                a(href="#") Keo dán
-                            li.nav-hover-dropdown
-                                a(href="#") Thước - Compa
-                            li.nav-hover-dropdown
-                                a(href="#") Dây buộc
-                            li.nav-hover-dropdown
-                                a(href="#") Đóng dấu - Tampon
+                                a(href="#") Khăn giấy - giấy vệ sinh
                     li.hover-nav
                         a(href="#")
                             span bìa hồ sơ
                             i.fas.fa-chevron-down.arrow-down
                         ul.nav-dropdown
                             li.nav-hover-dropdown
-                                a(href="#") Bấm kim
+                                a(href="#") Bìa còng
                             li.nav-hover-dropdown
-                                a(href="#") Bấm lỗ
+                                a(href="#") Bìa lưu trữ
                             li.nav-hover-dropdown
-                                a(href="#") Dao kéo
+                                a(href="#") Bìa phân trang
                             li.nav-hover-dropdown
-                                a(href="#") Kim bấm
-                            li.nav-hover-dropdown
-                                a(href="#") Kẹp sách - Gáy sách
-                            li.nav-hover-dropdown
-                                a(href="#") Băng keo - Cắt keo
-                            li.nav-hover-dropdown
-                                a(href="#") Keo dán
-                            li.nav-hover-dropdown
-                                a(href="#") Thước - Compa
-                            li.nav-hover-dropdown
-                                a(href="#") Dây buộc
-                            li.nav-hover-dropdown
-                                a(href="#") Đóng dấu - Tampon
+                                a(href="#") Bìa album
                     li.hover-nav
                         a(href="#")
                             span bút viết
                             i.fas.fa-chevron-down.arrow-down
                         ul.nav-dropdown
                             li.nav-hover-dropdown
-                                a(href="#") Bấm kim
+                                a(href="#") Bút bi - Gel
                             li.nav-hover-dropdown
-                                a(href="#") Bấm lỗ
+                                a(href="#") Bút chì
                             li.nav-hover-dropdown
-                                a(href="#") Dao kéo
+                                a(href="#") Bút lông - Dạ quang
                             li.nav-hover-dropdown
-                                a(href="#") Kim bấm
+                                a(href="#") Bút chuyên dụng
                             li.nav-hover-dropdown
-                                a(href="#") Kẹp sách - Gáy sách
+                                a(href="#") Ruột bút
                             li.nav-hover-dropdown
-                                a(href="#") Băng keo - Cắt keo
-                            li.nav-hover-dropdown
-                                a(href="#") Keo dán
-                            li.nav-hover-dropdown
-                                a(href="#") Thước - Compa
-                            li.nav-hover-dropdown
-                                a(href="#") Dây buộc
-                            li.nav-hover-dropdown
-                                a(href="#") Đóng dấu - Tampon
+                                a(href="#") Phụ kiện bút
                     li.hover-nav
                         a(href="#")
                             span tập sổ
                             i.fas.fa-chevron-down.arrow-down
                         ul.nav-dropdown
                             li.nav-hover-dropdown
-                                a(href="#") Bấm kim
+                                a(href="#") Sổ tập
                             li.nav-hover-dropdown
-                                a(href="#") Bấm lỗ
-                            li.nav-hover-dropdown
-                                a(href="#") Dao kéo
-                            li.nav-hover-dropdown
-                                a(href="#") Kim bấm
-                            li.nav-hover-dropdown
-                                a(href="#") Kẹp sách - Gáy sách
-                            li.nav-hover-dropdown
-                                a(href="#") Băng keo - Cắt keo
-                            li.nav-hover-dropdown
-                                a(href="#") Keo dán
-                            li.nav-hover-dropdown
-                                a(href="#") Thước - Compa
-                            li.nav-hover-dropdown
-                                a(href="#") Dây buộc
-                            li.nav-hover-dropdown
-                                a(href="#") Đóng dấu - Tampon
+                                a(href="#") Phiếu - Biểu mẫu
                     li.hover-nav
                         a(href="#")
                             span lưu trữ
                             i.fas.fa-chevron-down.arrow-down
                         ul.nav-dropdown
                             li.nav-hover-dropdown
-                                a(href="#") Bấm kim
+                                a(href="#") Khay kệ
                             li.nav-hover-dropdown
-                                a(href="#") Bấm lỗ
+                                a(href="#") Hộp cầm bút
                             li.nav-hover-dropdown
-                                a(href="#") Dao kéo
+                                a(href="#") Dụng cụ lưu trữ
                             li.nav-hover-dropdown
-                                a(href="#") Kim bấm
+                                a(href="#") Khay Brochure - Menu
                             li.nav-hover-dropdown
-                                a(href="#") Kẹp sách - Gáy sách
+                                a(href="#") Bao thư
                             li.nav-hover-dropdown
-                                a(href="#") Băng keo - Cắt keo
+                                a(href="#") Bảng tên
                             li.nav-hover-dropdown
-                                a(href="#") Keo dán
-                            li.nav-hover-dropdown
-                                a(href="#") Thước - Compa
-                            li.nav-hover-dropdown
-                                a(href="#") Dây buộc
-                            li.nav-hover-dropdown
-                                a(href="#") Đóng dấu - Tampon
+                                a(href="#") Khung hình
                     li.hover-nav
                         a(href="#")
                             span thiết bị
                             i.fas.fa-chevron-down.arrow-down
                         ul.nav-dropdown
                             li.nav-hover-dropdown
-                                a(href="#") Bấm kim
+                                a(href="#") CD - DVD - USB
                             li.nav-hover-dropdown
-                                a(href="#") Bấm lỗ
+                                a(href="#") Bàn phím - Chuột
                             li.nav-hover-dropdown
-                                a(href="#") Dao kéo
+                                a(href="#") Pin
                             li.nav-hover-dropdown
-                                a(href="#") Kim bấm
+                                a(href="#") Máy tính
                             li.nav-hover-dropdown
-                                a(href="#") Kẹp sách - Gáy sách
+                                a(href="#") Dụng cụ - Máy VP
                             li.nav-hover-dropdown
-                                a(href="#") Băng keo - Cắt keo
+                                a(href="#") Thiết bị điện
                             li.nav-hover-dropdown
-                                a(href="#") Keo dán
-                            li.nav-hover-dropdown
-                                a(href="#") Thước - Compa
-                            li.nav-hover-dropdown
-                                a(href="#") Dây buộc
-                            li.nav-hover-dropdown
-                                a(href="#") Đóng dấu - Tampon
+                                a(href="#") Bảng
                     li.hover-nav
                         a(href="#")
                             span tiện ích
                             i.fas.fa-chevron-down.arrow-down
                         ul.nav-dropdown
                             li.nav-hover-dropdown
-                                a(href="#") Bấm kim
+                                a(href="#") DC vệ sinh
                             li.nav-hover-dropdown
-                                a(href="#") Bấm lỗ
+                                a(href="#") Dung dịch tẩy rửa
                             li.nav-hover-dropdown
-                                a(href="#") Dao kéo
+                                a(href="#") Gia dụng
                             li.nav-hover-dropdown
-                                a(href="#") Kim bấm
+                                a(href="#") Thực phẩm
                             li.nav-hover-dropdown
-                                a(href="#") Kẹp sách - Gáy sách
+                                a(href="#") Dược phẩm
                             li.nav-hover-dropdown
-                                a(href="#") Băng keo - Cắt keo
-                            li.nav-hover-dropdown
-                                a(href="#") Keo dán
-                            li.nav-hover-dropdown
-                                a(href="#") Thước - Compa
-                            li.nav-hover-dropdown
-                                a(href="#") Dây buộc
-                            li.nav-hover-dropdown
-                                a(href="#") Đóng dấu - Tampon
+                                a(href="#") Tiện ích cá nhân
                     li.hover-nav
                         a(href="#")
                             span mực - ruban
                             i.fas.fa-chevron-down.arrow-down
                         ul.nav-dropdown
                             li.nav-hover-dropdown
-                                a(href="#") Bấm kim
+                                a(href="#") Mực máy in
                             li.nav-hover-dropdown
-                                a(href="#") Bấm lỗ
-                            li.nav-hover-dropdown
-                                a(href="#") Dao kéo
-                            li.nav-hover-dropdown
-                                a(href="#") Kim bấm
-                            li.nav-hover-dropdown
-                                a(href="#") Kẹp sách - Gáy sách
-                            li.nav-hover-dropdown
-                                a(href="#") Băng keo - Cắt keo
-                            li.nav-hover-dropdown
-                                a(href="#") Keo dán
-                            li.nav-hover-dropdown
-                                a(href="#") Thước - Compa
-                            li.nav-hover-dropdown
-                                a(href="#") Dây buộc
-                            li.nav-hover-dropdown
-                                a(href="#") Đóng dấu - Tampon
-
+                                a(href="#") Ruban - Film Fax
