--- a/ProjectHKII-Website/src/sass/styles.scss
+++ b/ProjectHKII-Website/src/sass/styles.scss
@@ -4,7 +4,7 @@
 @import 'variables';
 @import 'mixins';
 @import 'grid';
-@import 'components';
+@import '_components.scss';
 @import 'patials';
 @import 'responsive';
 
