--- a/ProjectHKII-Website/src/view/layouts/layout-other-pages.pug
+++ b/ProjectHKII-Website/src/view/layouts/layout-other-pages.pug
@@ -30,6 +30,7 @@ html(lang="en")
         script(src="../../js/owl-carousel.js")
         //- Website JS
         script(type="text/javascript" src="../../js/navigation.js")
+        script(type="text/javascript" src="../../js/product-detail.js")
         script(type="text/javascript" src="../../js/product.js")
         script(type="text/javascript" src="../../js/index.js")
 
