--- a/ProjectHKII-Website/src/view/patials/product-detail.pug
+++ b/ProjectHKII-Website/src/view/patials/product-detail.pug
@@ -1,8 +1,95 @@
 .container
-    .product-page-title
-        .nav.breadcrumbs
-            a(href="#") Trang Chu
-            span.divider /
-            a(href="#") Trang Chu
-            span.divider /
-            a(href="#") Trang Chu
+    .breadCrumb
+        a(href="#") Trang Chủ
+        span.divider /
+        a(href="#") Dụng cụ văn phòng
+        span.divider /
+        a(href="#") Bấm kim
+    .productMain.row
+        .image.col-sm-12.col-lg-6
+            img(src="../../../dist/assets/images/bk-50la-600x600.jpg")
+        .content.col-sm-12.col-lg-6
+            .nameTag Bấm Kim 50LA - 240 Tờ
+            .divideTag
+            .priceTag.d-flex
+                p 350,000
+                span đ
+            .textTag
+                p Bấm kim lớn KW Trio lớn 50LA (240 TỜ) CHÍNH HÃNG
+                p Văn phòng phẩm giá rẻ và tốt nhất tại HCM
+                p Chuyên cung cấp văn phòng phẩm giá sỉ, Đồ dùng văn phòng tại thành phố Hồ Chí Minh
+                p Chúng tôi chuyên cung cấp văn phòng phẩm, thiết bị văn phòng, thiết bị bảo hộ giá rẻ nhất tại Hồ Chí Minh, với phương châm giá rẻ nhất, dịch vụ tốt nhất, cung cấp nhanh tại các quận huyện trong thành phố Hồ Chí Minh
+            form.cartForm
+                .quantityControl
+                    input(type="button" id="btnMinus" name="btnMinus" class="btnMinus" value="-" style="width: 40px")
+                    input(type="text" id="txtQuantity" name="txtQuantity" size="5" style="text-align: center" value="0")
+                    input(type="button" id="btnPlus" name="btnPlus" class="btnPlus" value="+" style="width: 40px")
+                    input(type="submit" id="" name="" value="Thêm Vào Giỏ" style="width: 200px; border-radius: 0.5rem").btn-secondary
+    .productDetail
+        ul.nav.nav-tabs
+            li.nav-item
+                a(href="#description" data-toggle="tab").nav-link.active Mô Tả
+            li.nav-item
+                a(href="#evaluation" data-toggle="tab").nav-link Đánh Giá
+        .tab-content
+            .tab-pane.active#description
+                .description
+                    h1 Dập Kim 50LA, KW TRIO
+                    p – KW trio là thương hiệu văn phòng phẩm uy tín tại Đài Loan trong lĩnh vực sản xuất các loại máy bấm kim, bấm lổ, kim bấm văn phòng
+                    p – Thân máy inox, dạng đẩy, bấm 240 tờ, chất lượng ưu việt
+                    p – Chức năng: lưu trữ tài liệu và chứng từ, đóng sách
+                    p – Đáp ứng tiêu chuẩn sức khỏe người dùng văn phòng
+                    p – NSX: Đài Loan
+                    p – Quy cách: 1 cái/hộp
+                    p – Tiết kiệm hơn khi chọn mua theo nhóm
+                    p – Chương trình khuyến mãi chỉ áp dụng cho các đơn hàng trực tuyến
+                    p – Vận chuyển miễn phí dựa trên giá trị đơn hàng
+                    p – Mẫu mã và thông tin sản phẩm có thể thay đổi theo chính sách nhà sản xuất
+                    p – Đơn vị tính: cái
+            .tab-pane.fade#evaluation
+                .evaluation
+                    h1 Đánh Giá
+                    p Chưa có đánh giá nào
+                    .comment
+                        h3 Đánh giá của bạn
+                        p * ** *** **** *****
+                        h3 Nhận xét của bạn
+                        textarea(style="width: 100%; height: 20rem")
+                        form
+                            .form-row
+                                .col-5.col-sm-5.form-group
+                                    label(for="") Tên*
+                                    input(type="text" id="" name="" maxlength="").form-control
+                                .col-5.col-sm-5.form-group
+                                    label(for="") Email*
+                                    input(type="email" id="" name="" maxlength="").form-control
+                            input(type="submit" value="Gửi Đi" style="width: 7.5rem").btn.btn-info.form-control
+
+    .productOthers
+        .container-fluid
+            h1 SẢN PHẨM TƯƠNG TỰ
+            .carousel.slide#productOthers(data-ride="carousel")
+                .carousel-inner.row.w-100.mx-auto(role="listbox")
+                    .carousel-item.col-12.col-sm-6.col-md-4.col-lg-3.active
+                        img(src="../../../dist/assets/images/bam_lo_978-600x600.jpg" alt="#").img-fluid.mx-auto.d-block
+                    .carousel-item.col-12.col-sm-6.col-md-4.col-lg-3
+                        img(src="../../../dist/assets/images/ban-cat-giay-a3-600x600.jpg" alt="#").img-fluid.mx-auto.d-block
+                    .carousel-item.col-12.col-sm-6.col-md-4.col-lg-3
+                        img(src="../../../dist/assets/images/Deli-7510-600x600.jpg" alt="#").img-fluid.mx-auto.d-block
+                    .carousel-item.col-12.col-sm-6.col-md-4.col-lg-3
+                        img(src="../../../dist/assets/images/DraftingCompass-600x600.jpg" alt="#").img-fluid.mx-auto.d-block
+                    .carousel-item.col-12.col-sm-6.col-md-4.col-lg-3
+                        img(src="../../../dist/assets/images/kb-23-23-600x600.jpg" alt="#").img-fluid.mx-auto.d-block
+                    .carousel-item.col-12.col-sm-6.col-md-4.col-lg-3
+                        img(src="../../../dist/assets/images/rope-600x600.jpg" alt="#").img-fluid.mx-auto.d-block
+                    .carousel-item.col-12.col-sm-6.col-md-4.col-lg-3
+                        img(src="../../../dist/assets/images/YP003-600x600.jpg" alt="#").img-fluid.mx-auto.d-block
+                a(href="#productOthers" role="button" data-slide="prev" style="text-align: left").carousel-control-prev
+                    span(aria-hidden="true").carousel-control-prev-icon
+                    span.sr-only Previous
+                a(href="#productOthers" role="button" data-slide="next").carousel-control-next
+                    span(aria-hidden="true").carousel-control-next-icon
+                    span.sr-only Next
+
+
+
