--- a/ProjectHKII-Website/src/sass/components/banner.scss
+++ b/ProjectHKII-Website/src/sass/components/banner.scss
@@ -203,7 +203,7 @@
 }
 
 @media (min-width: 550px) {
-    .owl-carousel {
+    .slider {
         height: 50rem;
         .owl-stage {
             // padding-top: 50rem;
@@ -215,7 +215,7 @@
 }
 
 @media (min-width: 850px) {
-    .owl-carousel {
+    .slider {
         height: 75rem;
         .owl-stage {
             // padding-top: 75rem;
