--- a/ProjectHKII-Website/src/sass/components/product-detail.scss
+++ b/ProjectHKII-Website/src/sass/components/product-detail.scss
@@ -94,19 +94,150 @@
             color: #000;
             padding: 1.5rem 0
         }
+        .slider-part {
+            margin-bottom: 2rem;
+            .owl-stage-outer {
+                .owl-stage {
+                    .owl-item {
+                        .item {
+                            img {
 
+                            }
+                        }
+                    }
+                }
+            }
+            .owl-nav {
+                .owl-prev {
+                    position: absolute;
+                    top: 0;
+                    left: -5%;
+                    height: 100%;
+                    width: 10rem;
+                    margin: 0;
+                }
+                .owl-next {
+                    position: absolute;
+                    top: 0;
+                    right: -5%;
+                    height: 100%;
+                    width: 10rem;
+                    margin: 0;
+                }
+                button.owl-prev,
+                button.owl-next {
+                    background: transparent;
+                    opacity: 0;
+                    transition: all .3s ease;
+                    -webkit-transition: all .3s ease;
+                    -moz-transition: all .3s ease;
+                    -ms-transition: all .3s ease;
+                    -o-transition: all .3s ease;
+                    &:hover{
+                        outline: none;
+                    }
+                    i {
+                        transition: all .3s ease;
+                        -webkit-transition: all .3s ease;
+                        -moz-transition: all .3s ease;
+                        -ms-transition: all .3s ease;
+                        -o-transition: all .3s ease;
+                        color: #111;
+                        font-size: 2.2rem;
+                    }
+                    &:hover i {
+                        color: #ff0000;
+                    }
+                }
+            }
+        }
+        .owl-carousel .owl-item .owl-lazy:not([src]), .owl-carousel .owl-item .owl-lazy[src^=""] {
+            max-height: none !important;
+        }
+        .banner-inner {
+            button.owl-prev,
+            button.owl-next {
+                outline: none;
+            }
+            &:hover button.owl-prev,
+            &:hover button.owl-next {
+                opacity: 1;
+                outline: none;
+            }
+            &:hover .owl-prev {
+                transform: translateX(10%);
+                -webkit-transform: translateX(10%);
+                -moz-transform: translateX(10%);
+                -ms-transform: translateX(10%);
+                -o-transform: translateX(10%);
+}
+            &:hover .owl-next {
+                transform: translateX(-10%);
+                -webkit-transform: translateX(-10%);
+                -moz-transform: translateX(-10%);
+                -ms-transform: translateX(-10%);
+                -o-transform: translateX(-10%);
+}
+        }
+    }
+}
+
+
+
+@media (min-width: 550px) {
+    .slider-part {
+        height: 60rem;
+        .owl-stage {
+            .owl-item {
+                height: 60rem;
+            }
+        }
+    }
+}
+
+@media (min-width: 770px) {
+    .slider-part {
+        height: 35rem;
+        .owl-stage {
+            .owl-item {
+                height: 35rem;
+            }
+        }
+    }
+}
+
+@media (min-width: 850px) {
+    .slider-part {
+        height: 23rem;
+        .owl-stage {
+            .owl-item {
+                height: 23rem;
+            }
+        }
+    }
+}
+
+@media (min-width: 992px) {
+    .slider-part {
+        height: 30rem;
+        .owl-stage {
+            // padding-top: 75rem;
+            .owl-item {
+                height: 30rem;
+            }
+        }
     }
 }
 
 //Carousel
-.col-md-3 {
-    display: inline-block;
-    margin-left:-4px;
-    img{
-        width:100%;
-        height:auto
-    }
-}
+// .col-md-3 {
+//     display: inline-block;
+//     margin-left:-4px;
+//     img{
+//         width:100%;
+//         height:auto
+//     }
+// }
 /*
 body {
     .carousel-indicators li {
@@ -122,151 +253,151 @@ body {
 }*/
 
 //Carousel
-@media (min-width: 768px) and (max-width: 991px) {
-    /*show 4th slide on md if col-md-4*/
-    .carousel-inner .active.col-md-4.carousel-item + .carousel-item + .carousel-item + .carousel-item {
-        position: absolute;
-        top: 0;
-        right: -33.3333%; /*change this with javascript in the future*/
-        z-index: -1;
-        display: block;
-        visibility: visible
-    }
-}
-@media (min-width: 576px) and (max-width: 768px) {
-    /*show 3rd slide on sm if col-sm-6*/
-    .carousel-inner .active.col-sm-6.carousel-item + .carousel-item + .carousel-item {
-        position: absolute;
-        top: 0;
-        right: -50%; /*change this with javascript in the future*/
-        z-index: -1;
-        display: block;
-        visibility: visible
-    }
-}
-@media (min-width: 576px) {
-    .carousel-item {
-        margin-right: 0
-    }
-    /*show 2 items*/
-    .carousel-inner .active + .carousel-item {
-        display: block
-    }
-    .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left),
-    .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left) + .carousel-item {
-        transition: none
-    }
-    .carousel-inner .carousel-item-next {
-        position: relative;
-        transform: translate3d(0, 0, 0)
-    }
-    /*left or forward direction*/
-    .active.carousel-item-left + .carousel-item-next.carousel-item-left,
-    .carousel-item-next.carousel-item-left + .carousel-item,
-    .carousel-item-next.carousel-item-left + .carousel-item + .carousel-item {
-        position: relative;
-        transform: translate3d(-100%, 0, 0);
-        visibility: visible
-    }
-    /*farthest right hidden item must be also positioned for animations*/
-    .carousel-inner .carousel-item-prev.carousel-item-right {
-        position: absolute;
-        top: 0;
-        left: 0;
-        z-index: -1;
-        display: block;
-        visibility: visible
-    }
-    /*right or previous direction*/
-    .active.carousel-item-right + .carousel-item-prev.carousel-item-right,
-    .carousel-item-prev.carousel-item-right + .carousel-item,
-    .carousel-item-prev.carousel-item-right + .carousel-item + .carousel-item {
-        position: relative;
-        transform: translate3d(100%, 0, 0);
-        visibility: visible;
-        display: block;
-        visibility: visible
-    }
-}
-/*MD*/
-@media (min-width: 768px) {
-    /*show 3rd of 3 item slide*/
-    .carousel-inner .active + .carousel-item + .carousel-item {
-        display: block
-    }
-    .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left) + .carousel-item + .carousel-item {
-        transition: none
-    }
-    .carousel-inner .carousel-item-next {
-        position: relative;
-        transform: translate3d(0, 0, 0)
-    }
-    /*left or forward direction*/
-    .carousel-item-next.carousel-item-left + .carousel-item + .carousel-item + .carousel-item {
-        position: relative;
-        transform: translate3d(-100%, 0, 0);
-        visibility: visible
-    }
-    /*right or previous direction*/
-    .carousel-item-prev.carousel-item-right + .carousel-item + .carousel-item + .carousel-item {
-        position: relative;
-        transform: translate3d(100%, 0, 0);
-        visibility: visible;
-        display: block;
-        visibility: visible
-    }
-}
-/*LG*/
-@media (min-width: 991px) {
-    /*show 4th item*/
-    .carousel-inner .active + .carousel-item + .carousel-item + .carousel-item {
-        display: block
-    }
-    .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left) + .carousel-item + .carousel-item + .carousel-item {
-        transition: none
-    }
-    /*show 5th slide on lg if col-lg-3*/
-    .carousel-inner .active.col-lg-3.carousel-item + .carousel-item + .carousel-item + .carousel-item + .carousel-item {
-        position: absolute;
-        top: 0;
-        right: -25%; /*change this with javascript in the future*/
-        z-index: -1;
-        display: block;
-        visibility: visible
-    }
-    /*left or forward direction*/
-    .carousel-item-next.carousel-item-left + .carousel-item + .carousel-item + .carousel-item + .carousel-item {
-        position: relative;
-        transform: translate3d(-100%, 0, 0);
-        visibility: visible
-    }
-    /*right or previous direction //t - previous slide direction last item animation fix*/
-    .carousel-item-prev.carousel-item-right + .carousel-item + .carousel-item + .carousel-item + .carousel-item {
-        position: relative;
-        transform: translate3d(100%, 0, 0);
-        visibility: visible;
-        display: block;
-        visibility: visible
-    }
-}
+// @media (min-width: 768px) and (max-width: 991px) {
+//     /*show 4th slide on md if col-md-4*/
+//     .carousel-inner .active.col-md-4.carousel-item + .carousel-item + .carousel-item + .carousel-item {
+//         position: absolute;
+//         top: 0;
+//         right: -33.3333%; /*change this with javascript in the future*/
+//         z-index: -1;
+//         display: block;
+//         visibility: visible
+//     }
+// }
+// @media (min-width: 576px) and (max-width: 768px) {
+//     /*show 3rd slide on sm if col-sm-6*/
+//     .carousel-inner .active.col-sm-6.carousel-item + .carousel-item + .carousel-item {
+//         position: absolute;
+//         top: 0;
+//         right: -50%; /*change this with javascript in the future*/
+//         z-index: -1;
+//         display: block;
+//         visibility: visible
+//     }
+// }
+// @media (min-width: 576px) {
+//     .carousel-item {
+//         margin-right: 0
+//     }
+//     /*show 2 items*/
+//     .carousel-inner .active + .carousel-item {
+//         display: block
+//     }
+//     .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left),
+//     .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left) + .carousel-item {
+//         transition: none
+//     }
+//     .carousel-inner .carousel-item-next {
+//         position: relative;
+//         transform: translate3d(0, 0, 0)
+//     }
+//     /*left or forward direction*/
+//     .active.carousel-item-left + .carousel-item-next.carousel-item-left,
+//     .carousel-item-next.carousel-item-left + .carousel-item,
+//     .carousel-item-next.carousel-item-left + .carousel-item + .carousel-item {
+//         position: relative;
+//         transform: translate3d(-100%, 0, 0);
+//         visibility: visible
+//     }
+//     /*farthest right hidden item must be also positioned for animations*/
+//     .carousel-inner .carousel-item-prev.carousel-item-right {
+//         position: absolute;
+//         top: 0;
+//         left: 0;
+//         z-index: -1;
+//         display: block;
+//         visibility: visible
+//     }
+//     /*right or previous direction*/
+//     .active.carousel-item-right + .carousel-item-prev.carousel-item-right,
+//     .carousel-item-prev.carousel-item-right + .carousel-item,
+//     .carousel-item-prev.carousel-item-right + .carousel-item + .carousel-item {
+//         position: relative;
+//         transform: translate3d(100%, 0, 0);
+//         visibility: visible;
+//         display: block;
+//         visibility: visible
+//     }
+// }
+// /*MD*/
+// @media (min-width: 768px) {
+//     /*show 3rd of 3 item slide*/
+//     .carousel-inner .active + .carousel-item + .carousel-item {
+//         display: block
+//     }
+//     .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left) + .carousel-item + .carousel-item {
+//         transition: none
+//     }
+//     .carousel-inner .carousel-item-next {
+//         position: relative;
+//         transform: translate3d(0, 0, 0)
+//     }
+//     /*left or forward direction*/
+//     .carousel-item-next.carousel-item-left + .carousel-item + .carousel-item + .carousel-item {
+//         position: relative;
+//         transform: translate3d(-100%, 0, 0);
+//         visibility: visible
+//     }
+//     /*right or previous direction*/
+//     .carousel-item-prev.carousel-item-right + .carousel-item + .carousel-item + .carousel-item {
+//         position: relative;
+//         transform: translate3d(100%, 0, 0);
+//         visibility: visible;
+//         display: block;
+//         visibility: visible
+//     }
+// }
+// /*LG*/
+// @media (min-width: 991px) {
+//     /*show 4th item*/
+//     .carousel-inner .active + .carousel-item + .carousel-item + .carousel-item {
+//         display: block
+//     }
+//     .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left) + .carousel-item + .carousel-item + .carousel-item {
+//         transition: none
+//     }
+//     /*show 5th slide on lg if col-lg-3*/
+//     .carousel-inner .active.col-lg-3.carousel-item + .carousel-item + .carousel-item + .carousel-item + .carousel-item {
+//         position: absolute;
+//         top: 0;
+//         right: -25%; /*change this with javascript in the future*/
+//         z-index: -1;
+//         display: block;
+//         visibility: visible
+//     }
+//     /*left or forward direction*/
+//     .carousel-item-next.carousel-item-left + .carousel-item + .carousel-item + .carousel-item + .carousel-item {
+//         position: relative;
+//         transform: translate3d(-100%, 0, 0);
+//         visibility: visible
+//     }
+//     /*right or previous direction //t - previous slide direction last item animation fix*/
+//     .carousel-item-prev.carousel-item-right + .carousel-item + .carousel-item + .carousel-item + .carousel-item {
+//         position: relative;
+//         transform: translate3d(100%, 0, 0);
+//         visibility: visible;
+//         display: block;
+//         visibility: visible
+//     }
+// }
 
-/*Carousel control*/
-.carousel a {
-    width: 4rem
-}
-.carousel-control-prev-icon, .carousel-control-next-icon {
-    display: none
-}
-.carousel.slide {
-    &:hover {
-        .carousel-control-prev-icon {
-            display: block;
-            background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E")
-        }
+// /*Carousel control*/
+// .carousel a {
+//     width: 4rem
+// }
+// .carousel-control-prev-icon, .carousel-control-next-icon {
+//     display: none
+// }
+// .carousel.slide {
+//     &:hover {
+//         .carousel-control-prev-icon {
+//             display: block;
+//             background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E")
+//         }
 
-        .carousel-control-next-icon {
-            display: block;
-            background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E")
-        }
-    }
-}
+//         .carousel-control-next-icon {
+//             display: block;
+//             background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E")
+//         }
+//     }
+// }
