--- a/ProjectHKII-Website/src/view/patials/product-detail.pug
+++ b/ProjectHKII-Website/src/view/patials/product-detail.pug
@@ -90,11 +90,85 @@
             //-     a(href="#productOthers" role="button" data-slide="next").carousel-control-next
             //-         span(aria-hidden="true").carousel-control-next-icon
             //-         span.sr-only Next
-            .owl-carousel.owl-theme
+            .owl-carousel.owl-theme.slider-part.banner-inner
                 .item
-                    .owl-lazy(data-src='../../../dist/assets/images/Deli-7510-600x600.jpg')
+                    .product-item
+                        .product-image
+                            img(src="../../../dist/assets/images/Deli-7510-600x600.jpg", alt="")
+                        .product-text
+                            .title-wrapper
+                                a(href="#") Đóng số 10 tự động
+                            .price-wrapper
+                                span.price
+                                    span.woocommerce-price-amount 800,000&nbsp;
+                                    span.woocommerce-price-currencySymbol đ
                 .item
-                    .owl-lazy(data-src='../../../dist/assets/images/Deli-7510-600x600.jpg')
+                    .product-item
+                        .product-image
+                            img(src="../../../dist/assets/images/DraftingCompass-600x600.jpg", alt="")
+                        .product-text
+                            .title-wrapper
+                                a(href="#") Đóng số 10 tự động
+                            .price-wrapper
+                                span.price
+                                    span.woocommerce-price-amount 800,000&nbsp;
+                                    span.woocommerce-price-currencySymbol đ
+                .item
+                    .product-item
+                        .product-image
+                            img(src="../../../dist/assets/images/YP003-600x600.jpg", alt="")
+                        .product-text
+                            .title-wrapper
+                                a(href="#") Đóng số 10 tự động
+                            .price-wrapper
+                                span.price
+                                    span.woocommerce-price-amount 800,000&nbsp;
+                                    span.woocommerce-price-currencySymbol đ
+                .item
+                    .product-item
+                        .product-image
+                            img(src="../../../dist/assets/images/kb-23-23-600x600.jpg", alt="")
+                        .product-text
+                            .title-wrapper
+                                a(href="#") Đóng số 10 tự động
+                            .price-wrapper
+                                span.price
+                                    span.woocommerce-price-amount 800,000&nbsp;
+                                    span.woocommerce-price-currencySymbol đ
+                .item
+                    .product-item
+                        .product-image
+                            img(src="../../../dist/assets/images/ban-cat-giay-a3-600x600.jpg", alt="")
+                        .product-text
+                            .title-wrapper
+                                a(href="#") Đóng số 10 tự động
+                            .price-wrapper
+                                span.price
+                                    span.woocommerce-price-amount 800,000&nbsp;
+                                    span.woocommerce-price-currencySymbol đ
+                .item
+                    .product-item
+                        .product-image
+                            img(src="../../../dist/assets/images/scotch-magic-810-invisible-tape-19mm-x-33m-600x600.jpg", alt="")
+                        .product-text
+                            .title-wrapper
+                                a(href="#") Đóng số 10 tự động
+                            .price-wrapper
+                                span.price
+                                    span.woocommerce-price-amount 800,000&nbsp;
+                                    span.woocommerce-price-currencySymbol đ
+                .item
+                    .product-item
+                        .product-image
+                            img(src="../../../dist/assets/images/jumbo-push-pins-100-count-colorful-clear-600x600.jpg", alt="")
+                        .product-text
+                            .title-wrapper
+                                a(href="#") Đóng số 10 tự động
+                            .price-wrapper
+                                span.price
+                                    span.woocommerce-price-amount 800,000&nbsp;
+                                    span.woocommerce-price-currencySymbol đ
+
 
 
 
