--- a/ProjectHKII-Website/src/view/patials/product-detail.pug
+++ b/ProjectHKII-Website/src/view/patials/product-detail.pug
@@ -19,12 +19,12 @@
                 p Văn phòng phẩm giá rẻ và tốt nhất tại HCM
                 p Chuyên cung cấp văn phòng phẩm giá sỉ, Đồ dùng văn phòng tại thành phố Hồ Chí Minh
                 p Chúng tôi chuyên cung cấp văn phòng phẩm, thiết bị văn phòng, thiết bị bảo hộ giá rẻ nhất tại Hồ Chí Minh, với phương châm giá rẻ nhất, dịch vụ tốt nhất, cung cấp nhanh tại các quận huyện trong thành phố Hồ Chí Minh
-            form.cartForm
+            form(style="font-size: 0").cartForm
                 .quantityControl
-                    input(type="button" id="btnMinus" name="btnMinus" class="btnMinus" value="-" style="width: 40px")
-                    input(type="text" id="txtQuantity" name="txtQuantity" size="5" style="text-align: center" value="0")
-                    input(type="button" id="btnPlus" name="btnPlus" class="btnPlus" value="+" style="width: 40px")
-                    input(type="submit" id="" name="" value="Thêm Vào Giỏ" style="width: 200px; border-radius: 0.5rem").btn-secondary
+                    input(type="button" id="btnMinus" name="btnMinus" value="-").btnMinus
+                    input(type="text" id="txtQuantity" name="txtQuantity" size="5" style="text-align: center; height: 4rem" value="0").txtQuantity
+                    input(type="button" id="btnPlus" name="btnPlus" value="+").btnPlus
+                    input(type="submit" id="" name="" value="Thêm Vào Giỏ" style="width: 15rem; height: 4rem; border-radius: 0.5rem").btn-success
     .productDetail
         ul.nav.nav-tabs
             li.nav-item
