--- a/ProjectHKII-Website/src/view/patials/product-detail.pug
+++ b/ProjectHKII-Website/src/view/patials/product-detail.pug
@@ -20,11 +20,11 @@
                 p Chuyên cung cấp văn phòng phẩm giá sỉ, Đồ dùng văn phòng tại thành phố Hồ Chí Minh
                 p Chúng tôi chuyên cung cấp văn phòng phẩm, thiết bị văn phòng, thiết bị bảo hộ giá rẻ nhất tại Hồ Chí Minh, với phương châm giá rẻ nhất, dịch vụ tốt nhất, cung cấp nhanh tại các quận huyện trong thành phố Hồ Chí Minh
             form(style="font-size: 0").cartForm
-                .quantityControl
+                .quantityControl.d-flex
                     input(type="button" id="btnMinus" name="btnMinus" value="-").btnMinus
-                    input(type="text" id="txtQuantity" name="txtQuantity" size="5" style="text-align: center; height: 4rem" value="0").txtQuantity
+                    input(type="text" id="txtQuantity" name="txtQuantity" size="3" value="0").txtQuantity
                     input(type="button" id="btnPlus" name="btnPlus" value="+").btnPlus
-                    input(type="submit" id="" name="" value="Thêm Vào Giỏ" style="width: 15rem; height: 4rem; border-radius: 0.5rem").btn-success
+                    input(type="submit" id="" name="" value="Thêm Vào Giỏ").btn-primary
     .productDetail
         ul.nav.nav-tabs
             li.nav-item
@@ -52,15 +52,29 @@
                     p Chưa có đánh giá nào
                     .comment
                         h3 Đánh giá của bạn
-                        p * ** *** **** *****
+                        <div class="stars">
+                        <form action="">
+                            <input class="star star-5" id="star-5" type="radio" name="star"/>
+                            <label class="star star-5" for="star-5" title="Awesome - 5 stars"></label>
+                            <input class="star star-4" id="star-4" type="radio" name="star"/>
+                            <label class="star star-4" for="star-4" title="Pretty good - 4 stars"></label>
+                            <input class="star star-3" id="star-3" type="radio" name="star"/>
+                            <label class="star star-3" for="star-3" title="Meh - 3 stars"></label>
+                            <input class="star star-2" id="star-2" type="radio" name="star"/>
+                            <label class="star star-2" for="star-2" title="Kinda bad - 2 stars"></label>
+                            <input class="star star-1" id="star-1" type="radio" name="star"/>
+                            <label class="star star-1" for="star-1" title="Sucks big time - 1 star"></label>
+                        </form>
+                        </div>
+
                         h3 Nhận xét của bạn
                         textarea(style="width: 100%; height: 20rem")
                         form
                             .form-row
-                                .col-5.col-sm-5.form-group
+                                .col-6.col-sm-6.form-group
                                     label(for="") Tên*
                                     input(type="text" id="" name="" maxlength="").form-control
-                                .col-5.col-sm-5.form-group
+                                .col-6.col-sm-6.form-group
                                     label(for="") Email*
                                     input(type="email" id="" name="" maxlength="").form-control
                             input(type="submit" value="Gửi Đi" style="width: 7.5rem").btn.btn-info.form-control
@@ -168,7 +182,3 @@
                                 span.price
                                     span.woocommerce-price-amount 800,000&nbsp;
                                     span.woocommerce-price-currencySymbol đ
-
-
-
-
