--- a/ProjectHKII-Website/src/sass/components/category-detail.scss
+++ b/ProjectHKII-Website/src/sass/components/category-detail.scss
@@ -1,3 +1,129 @@
-.banner {
-    color: black;
+.category-page-title{
+    padding: 37px 0px;
+    font-size: 1.85rem;
+    text-transform: uppercase;
+   .nav{
+       a{
+        color: rgba(102,102,102,0.7);
+        &:last-child {
+            color: #000;
+            font-weight: 500;
+        }
+       }
+       a:hover{
+        color: #222;
+        text-decoration: none;
+       }
+       span.divider{
+           margin: 0 8.5px;
+           color: rgba(102,102,102,0.7);
+       }
+   }
+}
+.detail-product {
+    .row{
+        .sidebar{
+            padding: 0px;
+            .sidebar-title{
+                font-size: 1.65rem;
+                color: #000;
+                font-weight: 500;
+                padding: 0px 0px 24px;
+            }
+            .sidebar-content{
+                .widget-list-product {
+                    border: 3px solid #ddd;
+                    border-radius: 5px;
+                    padding: 17px;
+                    ul.menu {
+                        width: 100%;
+                        li.menu-item {
+                            list-style-type: none;
+                            border-bottom: 1px dashed #ddd;
+                            font-size: 14px;
+                            padding: 6px 0px;
+                            a {
+                                color: #334862;
+                                i {
+                                    margin-right: 5px;                                   
+                                }
+                                i.button-collapse {
+                                    cursor: pointer;
+                                }
+                                .item-contents {
+                                    display: none;
+                                    ul.sub-menu{
+                                        li.sub-item{
+                                            a.item{
+                                                padding: 3px 0px;
+                                            }
+                                        }
+                                    }
+                                }
+                                 
+                            }
+                            a:hover{
+                                color: #222;
+                                text-decoration: none;
+                            }
+                            a.d-flex {
+                                color: #334862;
+                                justify-content: space-between;
+                                align-items : center;
+                                i {
+                                    opacity: 0.6;
+                                    font-size: 11px;
+                                    // transition: .2s all ease;
+                                    // -webkit-transition: .2s all ease;
+                                    // -moz-transition: .2s all ease;
+                                    // -ms-transition: .2s all ease;
+                                    // -o-transition: .2s all ease;
+                                }
+                            }
+                            .item-content {
+                                border-left: 1px dashed #ddd;
+                                ul.sub-menu {
+                                    li.sub-item {
+                                        border-bottom: 1px dashed #ddd;
+                                        list-style-type: none;
+                                        margin-left: 20px;
+                                        margin-top: 8px;
+                                        margin-bottom: 8px;
+                                        font-size: 12px;
+                                        a {
+                                            color: #334862;
+                                            text-decoration: none;
+                                        }
+                                    }
+                                    li.sub-item:last-child {
+                                        border: none;
+                                    }
+                                }
+                            }
+                        }
+                        li.menu-item:last-child {
+                            border: none;
+                        }
+                    }  
+                }
+            }
+        }
+    }
+}
+
+.hide {
+    display: none;
+}
+
+.rotate {
+    transform: rotate(-180deg);
+    -webkit-transform: rotate(-180deg);
+    -moz-transform: rotate(-180deg);
+    -ms-transform: rotate(-180deg);
+    -o-transform: rotate(-180deg);
+    transition: .3s all ease;
+    -webkit-transition: .3s all ease;
+    -moz-transition: .3s all ease;
+    -ms-transition: .3s all ease;
+    -o-transition: .3s all ease;
 }
