--- a/ProjectHKII-Website/src/sass/components/category-detail.scss
+++ b/ProjectHKII-Website/src/sass/components/category-detail.scss
@@ -1,120 +1,87 @@
-.category-page-title{
-    padding: 37px 0px;
+.category-page-title {
+    padding: 37.5px 0px;
     font-size: 1.85rem;
     text-transform: uppercase;
-   .nav{
-       a{
-        color: rgba(102,102,102,0.7);
-        &:last-child {
-            color: #000;
-            font-weight: 500;
+    .nav {
+        a {
+            color: rgba(100, 100, 100, 0.75);
+            &:last-child {
+                color: #000;
+                font-weight: 500
+            }
         }
-       }
-       a:hover{
-        color: #222;
-        text-decoration: none;
-       }
-       span.divider{
-           margin: 0 8.5px;
-           color: rgba(102,102,102,0.7);
-       }
-   }
+        a:hover {
+            color: #222;
+            text-decoration: none;
+        }
+        span.divider{
+            margin: 0 8.5px;
+            color: rgba(100, 100, 100, 0.75)
+        }
+    }
 }
 .detail-product {
-    .row{
-        .sidebar{
+    .row {
+        .sidebar {
             padding: 0px;
-            .sidebar-title{
+            .sidebar-title {
                 font-size: 1.65rem;
                 color: #000;
                 font-weight: 500;
-                padding: 0px 0px 24px;
+                padding: 0px 0px 25px
             }
-            .sidebar-content{
+            .sidebar-content {
                 .widget-list-product {
-                    border: 3px solid #ddd;
+                    border: 2.5px solid #ddd;
                     border-radius: 5px;
-                    padding: 17px;
+                    padding: 17.5px;
                     ul.menu {
                         width: 100%;
-                        li.menu-item {
+                        li {
                             list-style-type: none;
                             border-bottom: 1px dashed #ddd;
-                            font-size: 14px;
-                            padding: 6px 0px;
+                            font-size: 15px;
+                            padding: 5px 0px;
+                            .menu-category {
+                                display: flex;
+                                justify-content: space-between;
+                                align-items : center
+                            }
+                            .button-collapse {
+                                cursor: pointer
+                            }
+                            i {
+                                margin-right: 5px;
+                                opacity: 0.75;
+                                font-size: 10px
+                            }
                             a {
                                 color: #334862;
-                                i {
-                                    margin-right: 5px;
-                                }
-                                i.button-collapse {
-                                    cursor: pointer;
-                                }
-                                .item-contents {
-                                    display: none;
-                                    ul.sub-menu{
-                                        li.sub-item{
-                                            a.item{
-                                                padding: 3px 0px;
-                                            }
-                                        }
-                                    }
-                                }
-
+                                text-decoration: none
                             }
-                            a:hover{
-                                color: #222;
-                                text-decoration: none;
-                            }
-                            a.d-flex {
-                                color: #334862;
-                                justify-content: space-between;
-                                align-items : center;
-                                i {
-                                    opacity: 0.6;
-                                    font-size: 11px;
-                                    // transition: .2s all ease;
-                                    // -webkit-transition: .2s all ease;
-                                    // -moz-transition: .2s all ease;
-                                    // -ms-transition: .2s all ease;
-                                    // -o-transition: .2s all ease;
-                                }
-                            }
-                            .item-content {
+                            ul {
                                 border-left: 1px dashed #ddd;
-                                ul.sub-menu {
-                                    li.sub-item {
-                                        border-bottom: 1px dashed #ddd;
-                                        list-style-type: none;
-                                        margin-left: 20px;
-                                        margin-top: 8px;
-                                        margin-bottom: 8px;
-                                        font-size: 12px;
-                                        a {
-                                            color: #334862;
-                                            text-decoration: none;
-                                        }
-                                    }
-                                    li.sub-item:last-child {
-                                        border: none;
-                                    }
+                                .menu-item {
+                                    border-bottom: 1px dashed #ddd;
+                                    list-style-type: none;
+                                    margin-left: 20px;
+                                    margin-top: 7.5px;
+                                    margin-bottom: 7.5px;
+                                    font-size: 12.5px;
+                                }
+                                .menu-item:last-child {
+                                    border: none
                                 }
                             }
                         }
-                        li.menu-item:last-child {
-                            border: none;
+                        li:last-child {
+                            border: none
                         }
                     }
                 }
             }
         }
     }
-}
-
-<<<<<<< HEAD
-=======
-.hide {
-    display: none;
 }
 
 .rotate {
@@ -127,6 +94,5 @@
     -webkit-transition: .3s all ease;
     -moz-transition: .3s all ease;
     -ms-transition: .3s all ease;
-    -o-transition: .3s all ease;
+    -o-transition: .3s all ease
 }
->>>>>>> 599a1c728a50f84df2710846b8c465b3361b44b8
