create 2 pages: cart, payment

--- a/ProjectHKII-Website/src/sass/_components.scss
+++ b/ProjectHKII-Website/src/sass/_components.scss
@@ -4,7 +4,8 @@
 @import 'components/footer.scss';
 @import 'components/product-detail.scss';
 @import 'components/category-detail.scss';
-
+@import 'components/cart.scss';
+@import 'components/payment.scss';
 
 
 
