--- a/ProjectHKII-Website/src/view/layouts/layout-other-pages.pug
+++ b/ProjectHKII-Website/src/view/layouts/layout-other-pages.pug
@@ -35,4 +35,5 @@ html(lang="en")
         script(type="text/javascript" src="../../js/category-detail.js")
         script(type="text/javascript" src="../../js/product.js")
         script(type="text/javascript" src="../../js/index.js")
+        script(type="text/javascript" src="../../js/payment.js")
 
