--- a/ProjectHKII-Website/src/sass/_typography.scss
+++ b/ProjectHKII-Website/src/sass/_typography.scss
@@ -12,8 +12,16 @@ html, body{
 * {
     padding: 0;
     margin: 0;
+    outline: none;
     box-sizing: border-box;
 }
+
+a {
+    text-decoration: none;
+    color: inherit
+}
+
+ol, ul {list-style-type: none}
 
 body, td, th, input, button{
     font-family: 'Maven Pro', sans-serif;
