--- a/ProjectHKII-Website/src/sass/_components.scss
+++ b/ProjectHKII-Website/src/sass/_components.scss
@@ -4,8 +4,9 @@
 @import 'components/footer.scss';
 @import 'components/product-detail.scss';
 @import 'components/category-detail.scss';
-@import 'components/cart.scss';
-@import 'components/payment.scss';
+@import 'components/cart-detail.scss';
+@import 'components/payment-detail.scss';
+@import 'components/empty-cart-detail.scss';
 
 
 
