--- a/ProjectHKII-Website/src/sass/components/payment-detail.scss
+++ b/ProjectHKII-Website/src/sass/components/payment-detail.scss
@@ -1,4 +1,4 @@
-.account, .coupon, .payment {
+.account-payment, .coupon, .payment {
     a {
         padding: 0 1rem;
         text-decoration: none;
@@ -11,7 +11,7 @@
         height: 3.5rem
     }
 }
-.account {
+.account-payment {
     margin-top: 2.5rem;
     .userName {
         padding: 0 1.5rem 0 0
