--- a/ProjectHKII-Website/src/view/pages/cart.pug
+++ b/ProjectHKII-Website/src/view/pages/cart.pug
@@ -1,6 +1,6 @@
 extends ../layouts/layout-other-pages.pug
 block main-content
     //-Vu
-    block cart
-        include ../patials/cart.pug
+    block cart-detail
+        include ../patials/cart-detail.pug
 
