--- a/ProjectHKII-Website/src/view/pages/payment.pug
+++ b/ProjectHKII-Website/src/view/pages/payment.pug
@@ -1,6 +1,6 @@
 extends ../layouts/layout-other-pages.pug
 block main-content
     //-Vu
-    block payment
-        include ../patials/payment.pug
+    block payment-detail
+        include ../patials/payment-detail.pug
 
