--- a/ProjectHKII-Website/src/view/patials/navigation-other-page.pug
+++ b/ProjectHKII-Website/src/view/patials/navigation-other-page.pug
@@ -16,6 +16,10 @@ section.menu-nav.position-relative
                 .account.justify-content-end
                     ul.nav
                         li.account-item
+                                a.nav-top-link.nav-top-not-logged-in
+                                    span đăng ký
+                        li.header-divider
+                        li.account-item
                             a.nav-top-link.nav-top-not-logged-in
                                 span đăng nhập
                         li.header-divider
