--- a/ProjectHKII-Website/src/view/patials/navigation.pug
+++ b/ProjectHKII-Website/src/view/patials/navigation.pug
@@ -17,6 +17,10 @@ section.menu-nav
                     ul.nav
                         li.account-item
                             a.nav-top-link.nav-top-not-logged-in
+                                span đăng ký
+                        li.header-divider
+                        li.account-item
+                            a.nav-top-link.nav-top-not-logged-in
                                 span đăng nhập
                         li.header-divider
                         li.cart-item
