--- a/ProjectHKII-Website/src/view/patials/payment-detail.pug
+++ b/ProjectHKII-Website/src/view/patials/payment-detail.pug
@@ -1,5 +1,5 @@
 .container
-    .account
+    .account-payment
         .row
             p Do you already have an account?
             a(href="#").btnShow >>> Click here to sign in <<<
