--- a/ProjectHKII-Website/src/sass/components/products.scss
+++ b/ProjectHKII-Website/src/sass/components/products.scss
@@ -82,17 +82,54 @@ section.product-content {
                 .product-item {
                     padding: 0 .98rem 1.96rem;
                     width: 20%;
-                    .product-image {
+                    &:hover {
                         img {
-                            max-width: 100%;
+                            transform: scale(1.1);
+                            -webkit-transform: scale(1.1);
+                            -moz-transform: scale(1.1);
+                            -ms-transform: scale(1.1);
+                            -o-transform: scale(1.1);
+                        }
+                        .product-text {
+                            transform: translateY(-20%);
+                            -webkit-transform: translateY(-20%);
+                            -moz-transform: translateY(-20%);
+                            -ms-transform: translateY(-20%);
+                            -o-transform: translateY(-20%);
+                        }
+                    }
+                    .product-image {
+                        padding-bottom: 2.5rem;
+                        cursor: pointer;
+                        a {
+                            display: block;
+                            img {
+                                max-width: 100%;
+                                transition: all .5s ease;
+                                -webkit-transition: all .5s ease;
+                                -moz-transition: all .5s ease;
+                                -ms-transition: all .5s ease;
+                                -o-transition: all .5s ease;
+                            }
                         }
                     }
                     .product-text {
                         text-align: center;
+                        transform: translateY(0);
+                        -webkit-transform: translateY(0);
+                        -moz-transform: translateY(0);
+                        -ms-transform: translateY(0);
+                        -o-transform: translateY(0);
+                        transition: all .3s ease;
+                        -webkit-transition: all .3s ease;
+                        -moz-transition: all .3s ease;
+                        -ms-transition: all .3s ease;
+                        -o-transition: all .3s ease;
                         .title-wrapper {
                             a {
                                 font-size: 1.5rem;
                                 color: #334862;
+                                text-decoration: none;
                             }
                         }
                         .price-wrapper {
