--- a/ProjectHKII-Website/src/sass/components/cart.scss
+++ b/ProjectHKII-Website/src/sass/components/cart.scss
@@ -1,14 +1,21 @@
 .cartDetails {
+    padding: 2rem 1.5rem;
     table {
         thead {
             th {
-                text-align: center
+                text-align: center;
+                color: #353535;
+                font-weight: 500
             }
 
         }
         tbody {
+            td {
+                color: #353535;
+                font-size: 1.5rem
+            }
             .productRemove, .productThumbnail, .productName, .productPrice, .productQuantity, .productTotal {
-                padding: 1rem 1.5rem;
+                padding: 1rem 1.5rem
             }
             .productRemove {
                 a {
@@ -30,30 +37,32 @@
             }
             .btnCartOut, .btnCartUpdate {
                 text-align: center;
-                border: 0.25rem solid rgb(150, 150, 150);
                 margin: 1.5rem 0.5rem;
-                padding: 0 0.5rem
+                padding: 0.25rem 0.5rem
             }
             .btnCartOut {
                 cursor: pointer;
+                border: 0.25rem solid #FF0000;
+                color: #FF0000;
                 a:hover {
                     text-decoration: none
                 }
                 &:hover {
-                    background-color: rgb(225, 75, 75);
-                    border-color: rgb(225, 75, 75);
+                    background-color: #FF0000;
                     a {
                         color: white
                     }
                 }
             }
             .btnCartUpdate {
+                background-color: rgb(250, 100, 100);
+                color: white;
+                border: none;
                 a:hover {
                     text-decoration: none
                 }
                 &:hover {
-                    background-color: rgba(75, 75, 75, 0.5);
-                    border-color: rgb(175, 175, 175);
+                    background-color: rgb(225, 100, 100);
                     color: white
                 }
             }
@@ -71,6 +80,10 @@
     padding: 2rem 0 2rem 5rem;
     table {
         width: 100%;
+        th {
+            color: #353535;
+            font-weight: 500
+        }
         tr {
             border-bottom: 0.1rem solid rgb(225, 225, 225);
 
@@ -79,34 +92,52 @@
             }
             td {
                 padding: 1rem 0;
+                color: #353535;
+                font-size: 1.5rem
             }
+        }
+    }
+    .d-flex {
+        align-items: center;
+        border-bottom: 0.25rem solid rgb(225, 225, 225);
+        i {
+            padding-right: 1rem
         }
     }
     .cartPayment {
         cursor: pointer;
         text-align: center;
         margin: 1.5rem 0;
-        background-color: rgba(25, 75, 175, 0.85);
+        padding: 0.75rem 0;
+        background-color: rgb(50, 100, 200);
         color: white;
         font-weight: 500;
-        transition: 1.5s;
         a:hover {
             color: white;
             text-decoration: none
         }
         &:hover {
-            background-color: rgb(25, 75, 175);
+            background-color: rgb(25, 75, 150)
         }
     }
     form {
         h3 {
-            border-bottom: 0.25rem solid rgb(225, 225, 225);
             padding: 0.75rem 0;
+            color: #353535;
+            font-weight: 500
         }
         input {
             width: 100%;
+            padding: 0.75rem 1.5rem;
             margin: 0.75rem 0;
-
+            font-size: 1.5rem
+        }
+        input[type="submit"] {
+            background-color: #F9F9F9;
+            border: 0.1rem solid rgb(150, 150, 150);
+            &:hover {
+                background-color: rgb(200, 200, 200)
+            }
         }
         .btn-info {
             font-weight: 500;
